2016-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Fix missing line preventing documentation of
	enumeration constants.

2016-11-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/NSCalendarDate+GNUstepBase.m (weekOfYear): Fix
	an off by 1 calculation which meant that weekOfYear would return 2
	for the first week of a year whenever the first Thursday of that
	year is 7 Jan, for instance 2016.

2016-11-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m:
	* Source/NSUnarchiver.m:
	Fix for logic error decoding archives created by a machine with a
	different word size.  Was checking the size of the encoded scalar
	item, but not against the *local* size of the same type.

2016-11-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix error in last mod ... was calculating opbject
	layout incorrectly when fast-ARC moce used on 64bit system.
	Also simplified by removing special case optimising for single-threaded
	programs and use inline decrement to improve performance of release.

2016-10-28  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSObject.m: Re-enable fast-ARC mode when memory layout
	and atomic operations support permit. This changes the size of the
	field where the reference count is stored to the size of a pointer
	in some configurations.
	The effective maximum reference count is still 2^24 - 1.

2016-10-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m: Comment out _ARCCompliantRetainRelease for
	now because the retain count representation in gnustep-base and
	libobjc2 differs causing space leaks on 64-bit architectures.

2016-10-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Only atempt to read regular files into NSData,
	* Source/NSMessagePortNameServer.m: Ignore lock directories in the
	'names' directory.
	* Source/NSTask.m Increase files to close from 256 to 2048 to better
	reflect typical modern system limits.